--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
@@ -56,7 +56,7 @@
                 "\r\n",
                 "This notebook will guide you through getting ostress and a PowerShell notebook configured, and then you'll see how to use both together to initiate and analyze a failover of Azure SQL Database.  \r\n",
                 "\r\n",
-                ">Note: Learn more about the PowerShell commands used and availabile [in the documentation](https://docs.microsoft.com/en-us/azure/sql-database/sql-database-implement-geo-distributed-database?tabs=azure-powershell).  "
+                ">Note: Learn more about the PowerShell commands used and availabile [in the documentation](https://docs.microsoft.com/en-us/azure/sql-database/sql-database-powershell-samples?tabs=single-database).  "
             ],
             "metadata": {
                 "azdata_cell_guid": "920f1f34-a236-43b9-8395-c3e947ec94a7"
@@ -90,9 +90,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "\nName Version\n---- -------\nAz   3.5.0  \n\n\n",
-                    "output_type": "stream"
+                    "text": "\nName Version\n---- -------\nAz   3.5.0  \n\n\n"
                 }
             ],
             "execution_count": 1
@@ -116,9 +116,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "OSTRESS, A Generic ODBC-Based Stress/Replay Utility.\nVersion 9.04.0051 built for x64.\nCopyright ■ 1997-2014 Microsoft. All Rights Reserved\n            Computer: win-vm0218\n         Base Module: C:\\Program Files\\Microsoft Corporation\\RMLUtils\\ostress.exe\n          Process Id: 10632\n Active proc mask(0): 0x00000003\n        Architecture: 9\n           Page size: 4096\n                CPUs: 2\n    Processor groups: 1\n        Highest node: 0\n  Proximity: 00  Node: 00\n---------------------------------------\n               Group: 0\n---------------------------------------\n        Package mask: 0x00000003\n        Processor(s): 0x00000003 Function units: Shared\n        Processor(s): 0x00000003 assigned to Numa node: 0\nCurrent time bias: 0 minutes 0.00 hours DST not used \nNOTE: All command line arguments are case sensitive.  No space is allowed between the parameter switch and its specified value.\n\nUSAGE:\n\n  -S name of Microsoft SQL Server server to connect to\n  -D ODBC data source name to use for connection\n  -E use Windows auhentication to connect (default)\n  -U login ID\n  -P password\n  -d database name\n  -Q\"single batch query to process\"\n  -i SQL/RML file name or file wildcard to process\n  -n number of connections processing each input file/query - stress mode\n  -r number of iterations for each connection to execute its input file/query\n  -o output directory to write query results and log file\n  -l login timeout (sec)\n  -L integer value representing the language id\n  -t query timeout (sec)\n  -p network packet size for connections - SQL Server only\n  -q quiet mode; suppress all query output\n  -v verbose mode; show additional diagnostic output\n  -m [stress | replay] run in stress or replay mode\n  -a default password to use for SQL authentication during replay\n  -c control file name - required for replay mode\n  -T enable trace flag\n  -fx write query results as XML\n  -N disable \"OSTRESS exiting\" message\n  -M Advanced setting: max threads allowed, 0 is default setting.\n  -b Stop processing if an error is encountered during query execution.\n\nEXAMPLE: ostress -E -dpubs -Q\"select * from authors\"\nOSTRESS exiting due to error (-6)\n",
-                    "output_type": "stream"
+                    "text": "OSTRESS, A Generic ODBC-Based Stress/Replay Utility.\nVersion 9.04.0051 built for x64.\nCopyright ■ 1997-2014 Microsoft. All Rights Reserved\n            Computer: win-vm01\n         Base Module: C:\\Program Files\\Microsoft Corporation\\RMLUtils\\ostress.exe\n          Process Id: 7084\n Active proc mask(0): 0x00000003\n        Architecture: 9\n           Page size: 4096\n                CPUs: 2\n    Processor groups: 1\n        Highest node: 0\n  Proximity: 00  Node: 00\n---------------------------------------\n               Group: 0\n---------------------------------------\n        Package mask: 0x00000003\n        Processor(s): 0x00000003 Function units: Shared\n        Processor(s): 0x00000003 assigned to Numa node: 0\nCurrent time bias: 0 minutes 0.00 hours DST not used \nNOTE: All command line arguments are case sensitive.  No space is allowed between the parameter switch and its specified value.\n\nUSAGE:\n\n  -S name of Microsoft SQL Server server to connect to\n  -D ODBC data source name to use for connection\n  -E use Windows auhentication to connect (default)\n  -U login ID\n  -P password\n  -d database name\n  -Q\"single batch query to process\"\n  -i SQL/RML file name or file wildcard to process\n  -n number of connections processing each input file/query - stress mode\n  -r number of iterations for each connection to execute its input file/query\n  -o output directory to write query results and log file\n  -l login timeout (sec)\n  -L integer value representing the language id\n  -t query timeout (sec)\n  -p network packet size for connections - SQL Server only\n  -q quiet mode; suppress all query output\n  -v verbose mode; show additional diagnostic output\n  -m [stress | replay] run in stress or replay mode\n  -a default password to use for SQL authentication during replay\n  -c control file name - required for replay mode\n  -T enable trace flag\n  -fx write query results as XML\n  -N disable \"OSTRESS exiting\" message\n  -M Advanced setting: max threads allowed, 0 is default setting.\n  -b Stop processing if an error is encountered during query execution.\n\nEXAMPLE: ostress -E -dpubs -Q\"select * from authors\"\nOSTRESS exiting due to error (-6)\n"
                 }
             ],
             "execution_count": 2
@@ -128,7 +128,9 @@
             "source": [
                 "If either of the above cells fail, please revisit the prerequisites before continuing.  \r\n",
                 "\r\n",
-                "In the below cell, replace the `0406` with the ID you are using for the workshop. Also, add your subscription ID and your SQL authentication password.   "
+                "In the below cell, replace the `0406` with the unique Workshop ID (e.g. `0406`, `168563`, etc.) you are using for the workshop. Also, add your subscription ID and your SQL authentication password for the logical server.   \r\n",
+                "\r\n",
+                "> Note: If you have special characters in your password (especially the `$` character), you may need to escape them by placing a **`** before. For example, if my password is `$pass1w0rd`, I need to enter as **`$pass1w0rd**. Otherwise, you may have authentication issues in future steps.  "
             ],
             "metadata": {
                 "azdata_cell_guid": "6abe1497-8822-481b-b0cf-35581ca21b4e"
@@ -140,7 +142,7 @@
                 "# Cell A\r\n",
                 "# Add your info\r\n",
                 "$unique_id = \"0406\"\r\n",
-                "$subscriptionId = \"subscription\"\r\n",
+                "$subscriptionId = \"subscriptionID\"\r\n",
                 "$password = \"password\"\r\n",
                 "\r\n",
                 "# Do not modify\r\n",
@@ -148,19 +150,15 @@
                 "$resourceGroup = \"azuresqlworkshop$($unique_id)\"\r\n",
                 "$server = \"aw-server$($unique_id)\"\r\n",
                 "$database = \"AdventureWorks$($unique_id)\"\r\n",
-                "$serverFullName = \"$($server).database.windows.net\""
+                "$serverFullName = \"$($server).database.windows.net\"\r\n",
+                "Write-Host \"Variables Received\""
             ],
             "metadata": {
-                "azdata_cell_guid": "6b2b94fd-470d-462e-bc9e-721a5b1f7b28"
+                "azdata_cell_guid": "6b2b94fd-470d-462e-bc9e-721a5b1f7b28",
+                "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 5
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -198,28 +196,56 @@
                 "\r\n",
                 "Instead, you will use an Azure Data Studio trick to run certain cells in the integrated terminal in Azure Data Studio.  \r\n",
                 "\r\n",
+                "The following gif summarizes how to open Keyboard Shortcuts to the right. After the gif, there are step-by-step instructions.  \r\n",
+                "\r\n",
+                "![](./graphics/shortcutgif.gif)  \r\n",
+                "\r\n",
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "4db9aa26-4f07-44fe-8edf-e5d52efbace5"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "First, in Azure Data Studio, go to **File** > **Preferences** > **Keyboard Shortcuts**.  \r\n",
                 "\r\n",
                 "![](./graphics/keyboardshortcuts.png)  \r\n",
+                "\r\n",
+                "Once this is open, you may find it easier to drag the **Keyboard Shortcuts** tab to the right, providing a split view.  \r\n",
+                "\r\n",
+                "![](./graphics/splitview.png)  \r\n",
                 "\r\n",
                 "Next, search for `terminal: run` and select the **+** button next to \"Terminal: Run Selected Text in Active Terminal\". select **CTRL** + **t** and then press **ENTER**.  \r\n",
                 "\r\n",
                 "![](./graphics/ctrlt.png)  \r\n",
                 "\r\n",
-                "You should now see `CTRL + T` under \"Keybinding\" for \"Terminal: Run Selected Text in Active Terminal\". You can now close the \"Keyboard Shortcuts\" tab.  \r\n",
+                "You should now see `CTRL + T` under \"Keybinding\" for \"Terminal: Run Selected Text in Active Terminal\".   \r\n",
                 "\r\n",
                 "![](./graphics/keyboardshortcuts2.png)  \r\n",
                 "\r\n",
+                "You can now **close the \"Keyboard Shortcuts\" tab**, which will give you some screen real estate back.  "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "30935d72-affd-4c92-9731-ea542be02e50"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "Now things get interesting. We want to run the ostress workload in the terminal, but the terminal maintain a separate context from the PowerShell notebook. That means the variables/configurations you set in the previous two cells, **have not been run in the terminal context**. In order to do this, for the two cells above, labeled **Cell A** and **Cell B** (with comments), click into the text. Then, select all the text (you can use `CTRL` + `a`) and use your new shortcut (use `CTRL` + `t`). You should see a terminal appear in the bottom section of your Azure Data Studio window, and you should see .  \r\n",
                 "\r\n",
                 "Now, you will do the same for the following cell: Select all the text (you can use `CTRL` + `a`) and use your new shortcut (use `CTRL` + `t`) to run the ostress workload in your integrated terminal. **Do not use the \"Play\" button to run this cell - use the shortcut**.   \r\n",
                 "\r\n",
                 "If, at any time, you want to stop running the ostress workload before it is complete, you can go into the terminal and press `CTRL` + `c`.  \r\n",
                 "\r\n",
-                "If, at any time, you want to run the workload again in the terminal, you can use the same method (select all the text and use the shortcut).  "
+                "If, at any time, you want to run the workload again in the terminal, you can use the same method (select all the text and use the shortcut).  \r\n",
+                "\r\n",
+                "> Note: If the ostress.exe command fails in the terminal, check your variables again. If you have special characters, you may need to escape them by placing a **`** before. For example, if my password is `$pass1w0rd`, I need to enter as **`$pass1w0rd**"
             ],
             "metadata": {
-                "azdata_cell_guid": "4db9aa26-4f07-44fe-8edf-e5d52efbace5"
+                "azdata_cell_guid": "b27378ed-2369-48b0-9b80-3b8e2fb90f47"
             }
         },
         {
@@ -259,19 +285,19 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
+                    "text": ""
                 }
             ],
-            "execution_count": 7
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
             "source": [
                 "**Step 3 - Observe the results in ostress**  \r\n",
                 "\r\n",
-                "While this cell is running, you should observe any changes that appear in the terminal. You'll notice that while the failover occurs, for some time you cannot access the database. The importance of retry logic in your application is very important, because if Azure decides to fail you over (for a number of reasons), you don't want your application to crash or become down for any longer than it takes for the failover to occur.  \r\n",
+                "While this cell is running, you should observe any changes that appear in the terminal. You'll notice that while the failover occurs, for some time you cannot access the database. Once the failover completes, you can see the workload runs successfully again. The importance of retry logic in your application is very important, because if Azure decides to fail you over (for a number of reasons), you don't want your application to crash or become down for any longer than it takes for the failover to occur.  \r\n",
                 "\r\n",
                 "This tool to create a failover on command can be useful in certain scenarios. It's important to note that the service does throttle you from doing this too often. Press \"Play\" in the cell below to try to run the failover again.  "
             ],
@@ -292,12 +318,23 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "Invoke-AzSqlDatabaseFailover : Long running operation failed with status 'Failed'. Additional Info:'There was a recent \nfailover on the database or pool if database belongs in an elastic pool.  At least 30 minutes must pass between \ndatabase failovers.'\nAt line:3 char:1\n+ Invoke-AzSqlDatabaseFailover -ResourceGroupName $resourceGroup `\n+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n    + CategoryInfo          : CloseError: (:) [Invoke-AzSqlDatabaseFailover], CloudException\n    + FullyQualifiedErrorId : Microsoft.Azure.Commands.Sql.Database.Cmdlet.InvokeAzureSqlDatabaseFailover\n \n",
-                    "output_type": "stream"
+                    "text": "Invoke-AzSqlDatabaseFailover : Long running operation failed with status 'Failed'. Additional Info:'There was a recent \nfailover on the database or pool if database belongs in an elastic pool.  At least 30 minutes must pass between \ndatabase failovers.'\nAt line:3 char:1\n+ Invoke-AzSqlDatabaseFailover -ResourceGroupName $resourceGroup `\n+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n    + CategoryInfo          : CloseError: (:) [Invoke-AzSqlDatabaseFailover], CloudException\n    + FullyQualifiedErrorId : Microsoft.Azure.Commands.Sql.Database.Cmdlet.InvokeAzureSqlDatabaseFailover\n \n"
                 }
             ],
-            "execution_count": 8
+            "execution_count": 7
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "You can now stop the workload by clicking on the terminal and selecting `CTRL` + `c`  \r\n",
+                "\r\n",
+                "And you can close the terminal by clicking the **X** in the top-right corner of the terminal.  "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "e1642bfc-5c11-4fa1-8061-897b26a06476"
+            }
         },
         {
             "cell_type": "markdown",
