--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
@@ -23,7 +23,9 @@
                 "\r\n",
                 "<p style=\"border-bottom: 1px solid lightgrey;\"></p>\r\n",
                 "\r\n",
-                "In this activity, you'll see how a common error can be recovered using point in time restore (PITR). This is easy to do in the portal or programmatically, but in this activity you'll see how to do it with the Azure CLI through a PowerShell notebook.  \r\n",
+                "In all organizations, big or small, accidents can happen. That's why you always have to have a plan for how you will restore to where you need to be. In SQL Server, ideally, you want choose to [restore to a point in time](https://docs.microsoft.com/en-us/sql/relational-databases/backup-restore/restore-a-sql-server-database-to-a-point-in-time-full-recovery-model?view=sql-server-ver15), but you can only do that if you are running in full recovery model. Under the bulk-logged recovery model, it's more likely that you'll have to recover the database to the end of the transaction log backup.  \r\n",
+                "\r\n",
+                "One of the benefits of Azure SQL is that Azure can take care of all of this for you. Since Azure SQL manages your backups and runs in full recovery model, it can restore you to any point in time (you can even [restore a deleted database](https://docs.microsoft.com/en-us/azure/sql-database/sql-database-recovery-using-backups#deleted-database-restore)). In this activity, you'll see how a common error can be recovered using point in time restore (PITR). This is easy to do in the portal or programmatically, but in this activity you'll see how to do it with the Azure CLI.  \r\n",
                 "\r\n",
                 "\r\n",
                 "**Set up**   \r\n",
@@ -32,7 +34,7 @@
                 "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **PowerShell**. This determines what language the code blocks in the file are. In this case, that language is PowerShell.  \r\n",
                 "2. Confirming the Kernel is **PowerShell**, for \"Attach to\", it should read **localhost**.  \r\n",
                 "\r\n",
-                "Now that you're set up, you should read the text cells and \"Run\" the code cells by selecting the play button that appears in the left of a code cell when you hover over it.  \r\n",
+                "Now that you're set up, you should read the text cells and \"Run\" the code cells by selecting the play button that appears in the left of a code cell when you hover over it. You should run the cells one at a time.    \r\n",
                 " \r\n",
                 ""
             ],
@@ -43,9 +45,32 @@
         {
             "cell_type": "markdown",
             "source": [
-                "**Step 0 - Delete a database on *accident***  \r\n",
+                "### Process for PITR\r\n",
+                "\r\n",
+                "Before you go any further, it's important to understand the recommended process for doing point in time restore (PITR):  \r\n",
+                "\r\n",
+                "0. A table or database is deleted on accident.\r\n",
+                "1. Determine the time that you need to go back to. This should be **before** the error or mistake took place.  \r\n",
+                "1. Complete PITR via PowerShell or the Azure portal to go back to this time. This deploys a new database and restores a copy of your database, e.g. **AdventureWorks0406-copy**.  \r\n",
+                "1. Confirm the new database (e.g. **AdventureWorks0406-copy**) is the correct state (before the accident occurred).  \r\n",
+                "1. Rename the original database, e.g. **AdventureWorks0406** to **AdventureWorks0406-old**.    \r\n",
+                "1. Rename the new database to the original database name, e.g. **AdventureWorks0406-copy** to **AdventureWorks0406**.  \r\n",
+                "1. Delete the original database, e.g. **AdventureWorks0406-old**.  \r\n",
+                "\r\n",
+                "In this notebook, you'll follow the steps that go along with the process above."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "f974b8b1-77a9-44ab-b713-5e98eb195bdc"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**Step 0 - Delete a table on *accident***  \r\n",
                 "\r\n",
                 "First, let's confirm that the table we'll *accidentally* delete does exist and have data in it. Let's take a look at some of the values in `SalesLT.OrderDetail`.  \r\n",
+                "\r\n",
+                "**Navigate to SSMS** and **Update your connection**\r\n",
                 "\r\n",
                 "**Using SSMS**, run the following query and review the results.  \r\n",
                 "\r\n",
@@ -74,23 +99,15 @@
         {
             "cell_type": "markdown",
             "source": [
-                "Before you go any further, it's important to understand the recommended process for doing point in time restore (PITR):  \r\n",
-                "\r\n",
-                "1. Determine the time that you need to go back to. This should be **before** the error or mistake took place.  \r\n",
-                "1. Complete PITR via PowerShell or the Azure portal to go back to this time. This deploys a new database and restores a copy of your database, e.g. **AdventureWorks0406-copy**.  \r\n",
-                "1. Confirm the new database (e.g. **AdventureWorks0406-copy**) is where you need to be.  \r\n",
-                "1. Rename the original database, e.g. **AdventureWorks0406** to **AdventureWorks0406-old**.    \r\n",
-                "1. Rename the new database to the original database name, e.g. **AdventureWorks0406-copy** to **AdventureWorks0406**.  \r\n",
-                "1. Delete the original database, e.g. **AdventureWorks0406-old**.  \r\n",
-                "\r\n",
-                "\r\n",
                 "**Set up Azure CLI**\r\n",
                 "\r\n",
-                "Finally, before you get into the steps, fill in your **Subscription ID** and **Workshop ID** information so the rest goes smoothly.  \r\n",
+                "Finally, before you get into the steps, fill in your **Subscription ID** and **Workshop ID** (unique ID you've been using for other resources, e.g. `0406` or `168563`) information so the rest goes smoothly.  \r\n",
                 "\r\n",
                 "You can then log in to the Azure portal and set the subscription.  \r\n",
                 "\r\n",
                 "Run the cells before moving to **Step 1**.  \r\n",
+                "\r\n",
+                "> Note: if you want to use this notebook for other databases and subscriptions in the future, you just need to replace the Subscription ID, Database Name, Logical server, and Resource group in the cell below to match your environment.  \r\n",
                 ""
             ],
             "metadata": {
@@ -101,25 +118,20 @@
             "cell_type": "code",
             "source": [
                 "$subscription_id = \"<SubscriptionId>\"\r\n",
-                "$unique_id = \"<WorkshopUserID>\"\r\n",
+                "$unique_id = \"<WorkshopID>\"\r\n",
                 "$database_name = \"AdventureWorks$($unique_id)\"\r\n",
                 "$database_name_copy = \"$($database_name)-copy\"\r\n",
                 "$database_name_old = \"$($database_name)-old\"\r\n",
                 "$logical_server = \"aw-server$($unique_id)\"\r\n",
-                "$resource_group = \"azuresqlworkshop$($unique_id)\""
+                "$resource_group = \"azuresqlworkshop$($unique_id)\"\r\n",
+                "Write-Output \"Variables Received\""
             ],
             "metadata": {
                 "azdata_cell_guid": "020f8439-7a13-4c60-b9db-2d406f956fc5",
                 "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 1
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -154,19 +166,16 @@
             "cell_type": "code",
             "source": [
                 "# Specify your default subscription, resource group, and Azure SQL Database logical server\r\n",
-                "az configure --defaults group=$resource_group sql-server=$logical_server"
+                "az configure --defaults group=$resource_group sql-server=$logical_server\r\n",
+                "\r\n",
+                "# Confirm the defaults have been set\r\n",
+                "az configure --list-defaults"
             ],
             "metadata": {
                 "azdata_cell_guid": "7e72198a-9791-409e-9386-7821479faf8a"
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 6
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -179,7 +188,7 @@
                 "\r\n",
                 "![](./graphics/viewauditlogs.png)  \r\n",
                 "\r\n",
-                "Select **Log Analytics**.  \r\n",
+                "Then, click on **Log Analytics**. If you see a *Get Started* screen, select **OK**. This then takes you to a query editor but it is not T-SQL. This view allows you to query logs using Kusto query language or KQL, which is meant to be easy to use and understand by SQL professionals. For the KQL documentation, [refer here](https://docs.microsoft.com/en-us/azure/kusto/query/).  \r\n",
                 "\r\n",
                 "![](./graphics/loganalytics.png)  \r\n",
                 "\r\n",
@@ -213,20 +222,15 @@
         {
             "cell_type": "code",
             "source": [
-                "$before_error_time =\"2020-02-10T21:28:54.509\""
+                "$before_error_time =\"2020-02-10T21:28:54.509\"\r\n",
+                "Write-Output \"Variable Received\""
             ],
             "metadata": {
                 "azdata_cell_guid": "e66b65ce-c896-4457-97c4-9554c94d2aef",
                 "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 7
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -360,19 +364,14 @@
         {
             "cell_type": "code",
             "source": [
-                "az sql db delete --name $database_name_old --yes"
+                "az sql db delete --name $database_name_old --yes\r\n",
+                "Write-Host \"Database deleted\""
             ],
             "metadata": {
                 "azdata_cell_guid": "86e9abb5-8db7-460c-ac20-b730a0db7b40"
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 12
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -386,7 +385,7 @@
         {
             "cell_type": "code",
             "source": [
-                "az sql db list"
+                "az sql db list -o table"
             ],
             "metadata": {
                 "azdata_cell_guid": "18ef1258-ace5-481c-b3a7-b6962894d2cc"
