wednesday feedback checkin

--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
@@ -339,6 +339,15 @@
         {
             "cell_type": "markdown",
             "source": [
+                "## Save this file (File > Save or CTRL+S) for a future exercise."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "16b72317-4df5-4802-960b-2ff30b5bea95"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "**(Bonus) Step 4 - Look for signs in the portal that a failover occurred**   \r\n",
                 "\r\n",
                 "You might be wondering, if there's a way to check if potentially a failover occurred. There is no clear \"Failover occurred\" message that exists today, however, checking the Resource Health can be a good indicator.  \r\n",
