--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
@@ -52,7 +52,7 @@
                 "0. A table or database is deleted on accident.\r\n",
                 "1. Determine the time that you need to go back to. This should be **before** the error or mistake took place.  \r\n",
                 "1. Complete PITR via PowerShell or the Azure portal to go back to this time. This deploys a new database and restores a copy of your database, e.g. **AdventureWorks0406-copy**.  \r\n",
-                "1. Confirm the new database (e.g. **AdventureWorks0406-copy**) is the correct state (before the accident occurred).  \r\n",
+                "1. Confirm the new database (e.g. **AdventureWorks0406-copy**) is in the correct state (before the accident occurred).  \r\n",
                 "1. Rename the original database, e.g. **AdventureWorks0406** to **AdventureWorks0406-old**.    \r\n",
                 "1. Rename the new database to the original database name, e.g. **AdventureWorks0406-copy** to **AdventureWorks0406**.  \r\n",
                 "1. Delete the original database, e.g. **AdventureWorks0406-old**.  \r\n",
@@ -70,9 +70,11 @@
                 "\r\n",
                 "First, let's confirm that the table we'll *accidentally* delete does exist and have data in it. Let's take a look at some of the values in `SalesLT.OrderDetail`.  \r\n",
                 "\r\n",
-                "**Navigate to SSMS** and **Update your connection**\r\n",
+                "**Navigate to SSMS** and **update your connection**. You'll want to make sure that the connection you use is connecting to the logical server, but not a specific database (e.g. set to `<default>` in screenshot below). You should also confirm that **Additional Connection Parameters** is contains no text.   \r\n",
                 "\r\n",
-                "**Using SSMS**, run the following query and review the results.  \r\n",
+                "![](./graphics/default.png)\r\n",
+                "\r\n",
+                "Next, right-click on your AdventureWorks database and create a new query. Run the following query and review the results.  \r\n",
                 "\r\n",
                 "```sql\r\n",
                 "SELECT TOP 10 * from SalesLT.SalesOrderDetail\r\n",
@@ -83,7 +85,7 @@
                 "\r\n",
                 "For whatever reason, let's create a scenario where someone accidentally deletes that table. Today, you will be that someone.  \r\n",
                 "\r\n",
-                "**Using SSMS**, run the following query.\r\n",
+                "**Using the same query window**, run the following query.\r\n",
                 "\r\n",
                 "```sql\r\n",
                 "DROP TABLE SalesLT.SalesOrderDetail\r\n",
@@ -117,7 +119,7 @@
         {
             "cell_type": "code",
             "source": [
-                "$subscription_id = \"<SubscriptionId>\"\r\n",
+                "$subscription_id = \"<SubscriptionID>\"\r\n",
                 "$unique_id = \"<WorkshopID>\"\r\n",
                 "$database_name = \"AdventureWorks$($unique_id)\"\r\n",
                 "$database_name_copy = \"$($database_name)-copy\"\r\n",
@@ -222,7 +224,7 @@
         {
             "cell_type": "code",
             "source": [
-                "$before_error_time =\"2020-02-10T21:28:54.509\"\r\n",
+                "$before_error_time =\"2020-03-18T17:43:40.438\"\r\n",
                 "Write-Output \"Variable Received\""
             ],
             "metadata": {
@@ -267,7 +269,7 @@
                 "\r\n",
                 "![](./graphics/dbrestoring.png)  \r\n",
                 "\r\n",
-                "Once you see this, it should only be 1-2 minutes more. You will know it is done, because the \"stop\" button in the code cell below will stop spinning and go back to the standard \"play\" button. Also, you will no longer see \"(Restoring...)\" next to the copy database when you initiate a refresh.  \r\n",
+                "Once you see this, it should only be 1-2 minutes more. You will know it is done, because the \"stop\" button in the code cell above will stop spinning and go back to the standard \"play\" button. Also, you will no longer see \"(Restoring...)\" next to the copy database when you initiate a refresh.  \r\n",
                 "\r\n",
                 "If you notice it is taking longer than above stated times, it could be due to your environment. There are a limited number of restore requests that can be processed/submitted at once for a single subscription. If you want to learn more about the limits and related details for PITR while you wait, you can [read more to learn the details related to recovering an Azure SQL database by using automated database backups](https://docs.microsoft.com/en-us/azure/sql-database/sql-database-recovery-using-backups). "
             ],
@@ -278,7 +280,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "**Step 3 - Confirm the new database is where you need to be**\r\n",
+                "**Step 3 - Confirm the new database is in the correct state (before the accident occurred)**\r\n",
                 "\r\n",
                 "In order to do this, refresh your connection to the Azure SQL Database logical server in SSMS (right-click on the logical server and select **Refresh**).  \r\n",
                 "\r\n",
@@ -309,7 +311,11 @@
                 "\r\n",
                 "This step involves renaming the original database to something similar to **AdventureWorks0406-old** so you can later rename the new database to the original database name. As long as your applications use retry logic, this will make it so no connection strings need to be changed.  \r\n",
                 "\r\n",
-                "Now, you're very familiar with how to rename databases in SSMS, but here you will see how it can be easily done using the Azure CLI.  "
+                "Now, you're very familiar with how to rename databases in SSMS, but here you will see how it can be easily done using the Azure CLI.  \r\n",
+                "\r\n",
+                "> Note: If at any point your database appears unavailable (e.g. you can't connect when you refresh the connection), it could be due to updates happening to the DNS table. So while the database isn't physically unavailable, it is unresolvable. If you wait a minute or so, you should be able to resume normal activities.  \r\n",
+                "\r\n",
+                ""
             ],
             "metadata": {
                 "azdata_cell_guid": "0dfb6493-4a9d-450c-8ae8-d9dfe11b744f"
@@ -396,7 +402,10 @@
         {
             "cell_type": "markdown",
             "source": [
-                "You've now seen how you can leverage point in time restore (PITR) in Azure SQL Database. PITR is also available in Azure SQL Managed Instance, **for databases not the whole instance**. You can use almost the same commands except with `az sql midb` as opposed to `az sql db`. For more information, see the [documentation](https://docs.microsoft.com/en-us/cli/azure/sql/midb?view=azure-cli-latest#az-sql-midb-restore)."
+                "You've now seen how you can leverage point in time restore (PITR) in Azure SQL Database. PITR is also available in Azure SQL Managed Instance, **for databases not the whole instance**. You can use almost the same commands except with `az sql midb` as opposed to `az sql db`. For more information, see the [documentation](https://docs.microsoft.com/en-us/cli/azure/sql/midb?view=azure-cli-latest#az-sql-midb-restore).  \r\n",
+                "\r\n",
+                "\r\n",
+                ""
             ],
             "metadata": {
                 "azdata_cell_guid": "057514b2-bcdd-4624-8b95-c8ecd829ae07"
