--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/fg/fg-powershell.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/fg/fg-powershell.ipynb
@@ -120,7 +120,7 @@
             "outputs": [
                 {
                     "name": "stdout",
-                    "text": "Apache Maven 3.6.3 (cecedd343002696d0abb50b32b541b8a6ba2883f)\nMaven home: C:\\Program Files\\apache-maven-3.6.3\\bin\\..\nJava version: 1.8.0_241, vendor: Oracle Corporation, runtime: C:\\Program Files\\Java\\jdk1.8.0_241\\jre\nDefault locale: en_US, platform encoding: Cp1252\nOS name: \"windows 10\", version: \"10.0\", arch: \"amd64\", family: \"windows\"\n",
+                    "text": "Apache Maven 3.6.3 (cecedd343002696d0abb50b32b541b8a6ba2883f)\nMaven home: C:\\Users\\vmuser\\Downloads\\apache-maven-3.6.3-bin\\apache-maven-3.6.3\\bin\\..\nJava version: 1.8.0_241, vendor: Oracle Corporation, runtime: C:\\Program Files\\Java\\jdk1.8.0_241\\jre\nDefault locale: en_US, platform encoding: Cp1252\nOS name: \"windows 10\", version: \"10.0\", arch: \"amd64\", family: \"windows\"\n",
                     "output_type": "stream"
                 }
             ],
@@ -158,19 +158,14 @@
                 "$failoverGroup = \"aw-server-fg-$($unique_id)\"\r\n",
                 "$firewallRule = \"VmFirewall\"\r\n",
                 "$ip = Invoke-RestMethod -Uri 'https://ipinfo.io/ip'\r\n",
-                "$ipAddress = $ip.Substring(0,$ip.Length-1)"
+                "$ipAddress = $ip.Substring(0,$ip.Length-1)  \r\n",
+                "Write-Host \"Variables Received\""
             ],
             "metadata": {
                 "azdata_cell_guid": "6b2b94fd-470d-462e-bc9e-721a5b1f7b28"
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 10
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "code",
@@ -180,14 +175,8 @@
             "metadata": {
                 "azdata_cell_guid": "241a155a-c6a1-4e8b-a20f-f9c83ae008dc"
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "\nName                                     Account             SubscriptionName    Environment         TenantId          \n----                                     -------             ----------------    -----------         --------          \nDS-SQLBox-BobWardDemos_bobward_R&D_60... anna.hoffman@mic... DS-SQLBox-BobWar... AzureCloud          72f988bf-86f1-4...\n\n\n",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 4
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -206,7 +195,8 @@
                 "    -ServerName $drServer `\r\n",
                 "    -Location $drLocation `\r\n",
                 "    -SqlAdministratorCredentials $(New-Object -TypeName System.Management.Automation.PSCredential `\r\n",
-                "    -ArgumentList $admin, $(ConvertTo-SecureString -String $password -AsPlainText -Force))"
+                "    -ArgumentList $admin, $(ConvertTo-SecureString -String $password -AsPlainText -Force))\r\n",
+                "Write-Host \"New Azure SQL Database logical server Created in different region\""
             ],
             "metadata": {
                 "azdata_cell_guid": "a7fb1b43-d614-4e32-b8fb-7694fb5a7d02"
@@ -230,7 +220,8 @@
                 "New-AzSqlDatabaseFailoverGroup -ResourceGroupName $resourceGroup `\r\n",
                 "    -ServerName $server `\r\n",
                 "    -PartnerServerName $drServer `\r\n",
-                "    -FailoverGroupName $failoverGroup "
+                "    -FailoverGroupName $failoverGroup \r\n",
+                "Write-Host \"New auto-failover group created between the two Azure SQL Database logical servers\""
             ],
             "metadata": {
                 "azdata_cell_guid": "1d93bfb6-e9c3-41df-bfb1-92fc0ec296ca",
@@ -256,19 +247,14 @@
                 "    -ServerName $server -DatabaseName $database | `\r\n",
                 "    Add-AzSqlDatabaseToFailoverGroup -ResourceGroupName $resourceGroup `\r\n",
                 "    -ServerName $server `\r\n",
-                "    -FailoverGroupName $failoverGroup"
+                "    -FailoverGroupName $failoverGroup\r\n",
+                "Write-Host \"AdventureWorks database added to the auto-failover group\""
             ],
             "metadata": {
                 "azdata_cell_guid": "e00fe166-1896-45b4-aaa7-3e91c49cbdc8"
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "\n\nFailoverGroupName                    : aw-server-fg-0218\nLocation                             : West US\nResourceGroupName                    : azuresqlworkshop0218\nServerName                           : aw-server0218\nPartnerLocation                      : East US\nPartnerResourceGroupName             : azuresqlworkshop0218\nPartnerServerName                    : aw-server0218-dr\nReplicationRole                      : Primary\nReplicationState                     : CATCH_UP\nReadWriteFailoverPolicy              : Automatic\nFailoverWithDataLossGracePeriodHours : 1\nDatabaseNames                        : {AdventureWorks0218}\n\n\n\n",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 7
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -398,12 +384,23 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 12
+            "execution_count": 9
         },
         {
             "cell_type": "markdown",
             "source": [
-                "Start a manual failover"
+                "The result of the previous cell tells you if the secondary server in the auto-failover group is being used as the primary or secondary database."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "642e84cb-3fb8-4e44-92df-aee73a74c4ac"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "We can now see what happens when a failover occurs by starting a manual failover with the Azure PowerShell commands below.  \r\n",
+                "\r\n",
+                "When the failover occurs, you'll notice that some of the inserts and reads may fail briefly. But since our app keeps retrying, the application doesn't fail. And once the failover has completed, the inserts and reads become successful again.  "
             ],
             "metadata": {
                 "azdata_cell_guid": "74adcbb5-06e5-41c9-bb5a-ea4f5ab1ca59"
@@ -425,7 +422,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 13
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
@@ -452,12 +449,14 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 14
+            "execution_count": 11
         },
         {
             "cell_type": "markdown",
             "source": [
-                "**Step 8 - Fail back**"
+                "**Step 8 - Fail back**  \r\n",
+                "\r\n",
+                "Now we can fail back to our original configuration by using a similar command.  "
             ],
             "metadata": {
                 "azdata_cell_guid": "aabb9efe-cdd9-4589-ba1f-3cdb950588fc"
@@ -479,7 +478,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 15
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -506,7 +505,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 16
+            "execution_count": 13
         },
         {
             "cell_type": "markdown",
@@ -522,7 +521,11 @@
             "source": [
                 "You've seen how you can use the primary/secondary in an auto-failover group to help offload read-heavy workloads from the primary. In the previous activity, you also saw how in certain service tiers, like Business critical, you get a read-replica without setting up auto-failover groups. This begs the question, how many read-replicas do you have with a Business critical Azure SQL Database with an auto-failover group?  \r\n",
                 "\r\n",
-                "Maybe you guessed it, but the answer is **3**. You can investigate this claim by using SSMS (or ADS) to connect to the following servers (be sure to specify the database under connection properties) and running the command to check if it's ReadWrite or ReadOnly below:  \r\n",
+                "Maybe you guessed it, but the answer is **3**. You can investigate this claim by using SSMS (or ADS) to connect to the following servers (be sure to specify the database under connection properties) and running the query to check if it's ReadWrite or ReadOnly below.  \r\n",
+                "\r\n",
+                "The easiest way to do this is to create a New Database Engine Query by selecting **File** > **New** > **Database Engine Query**.  \r\n",
+                "\r\n",
+                "![](./graphics/newdbenginequery.png)\r\n",
                 "\r\n",
                 "Connections:  \r\n",
                 "* `aw-server-fg-`YourID`.database.windows.net`  \r\n",
